# Mimir3

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  makeMTFconfig.py  makeModelDefinition.py  pyproject.toml  requirements.txt  runMTF.py  runTests.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  pythonapp.yml
backend/: database.py  entry.py
conf/: MTF_modeltest.json  modeltest.json
docs/: Makefile  backend.rst  conf.py  index.rst  makeModelDefinition.rst  mimir.backend.rst  mimir.frontend.terminal.rst  mimir.rst  modules.rst  requirements.txt
mimir/backend/: database.py  entry.py  enums.py  helper.py  plugin.py
mimir/cli/: runMTF.py  update_backup_database.py
mimir/frontend/terminal/: application.py  display.py  helper.py  utils.py
mimir/frontend/terminal/executable/linux/: runVLC.sh
mimir/frontend/terminal/executable/macOS/: runIINA.zsh  runVLC.sh
mimir/frontend/terminal/executable/win/: runVLC.ps1
requirements/: dev.in  dev.txt  prod.txt  test.txt
tests/: README.md  makeTestStruc.sh  test_DB.py  test_DB2.py  test_DBEntry.py  test_display.py  test_entry.py  test_helper.py  test_mtf_base.py  test_plugin.py
