[tool.poetry]
name = "mimir"
version = "0.0.1"
description = "Database and Frontend for media files"
authors = ["Korbinian Schweiger <korbinian.schweiger@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
update_backup_database = "mimir.cli.update_backup_database:cli"
mtf = "mimir.cli.runMTF:main"

[tool.poetry.dependencies]
python = "^3.11"
hachoir = "==3.1.*"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
bpython = "^0.24"
pre-commit = "^3.5.0"
black = "^23.10.1"
mypy = "^1.6.1"
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "PD", "PT", "NPY", "N", "W", "RET", "ANN", "RUF"]
unfixable = ["F841", "RUF005"]
ignore = ["ANN101", "RUF009", "E731", "RET505"]
ignore-init-module-imports = true
target-version = "py311"

[tool.mypy]
strict_optional = true
check_untyped_defs = true
exclude = "tests"

[[tool.mypy.overrides]]
module = "coloredlogs.*"
ignore_missing_imports = true
